--- a/ProjektSklep/Views/Products/Create.cshtml
+++ b/ProjektSklep/Views/Products/Create.cshtml
@@ -14,7 +14,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CategoryID" class="control-label"></label>
+                <!--Imo tak naprawde można wpisać cokolwiek w labela co będzie wyświetlać się nad textinputem-->
+                <label asp-for="Category" class="control-label"></label>
                 <select asp-for="CategoryID" class ="form-control" asp-items="ViewBag.CategoryID"></select>
             </div>
             <div class="form-group">
